--- a/k3d/manifests/httpbin-ingress.yaml
+++ b/k3d/manifests/httpbin-ingress.yaml
@@ -3,10 +3,9 @@ kind: Ingress
 metadata:
   name: httpbin-route
   annotations:
-   kubernetes.io/ingress.class: kong
-#   konghq.com/plugins: ratelimit-httpbin
-   konghq.com/plugins: correlate-httpbin
-   konghq.com/strip-path: "true"
+    kubernetes.io/ingress.class: kong
+#    konghq.com/plugins: ratelimit-httpbin,correlate-httpbin
+    konghq.com/strip-path: "true"
 spec:
   rules:
   - http:
@@ -15,6 +14,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: httpbin
+            name: httpbin-service
             port:
               number: 80
