--- a/k3d/manifests/httpbin.yaml
+++ b/k3d/manifests/httpbin.yaml
@@ -1,7 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: httpbin
+  name: httpbin-service
+  annotations: 
+    konghq.com/path: "/anything"
+    konghq.com/plugins: ratelimit-httpbin,correlate-httpbin
 spec:
   ports:
   - name: httpbin
