--- a/.github/workflows/validate-kong.yaml
+++ b/.github/workflows/validate-kong.yaml
@@ -26,14 +26,14 @@ jobs:
         sleep 2
     - name: Test admin
       run:
-        docker run --network kong-dojo_default appropriate/curl -sS --retry 5 --retry-delay 5 --retry-connrefused http://kong-ent1:8001/status
+        docker run --network docker-compose_default appropriate/curl -sS --retry 5 --retry-delay 5 --retry-connrefused http://kong-ent1:8001/status
     - name: Load decK, validate and sync
       run: |
-        docker run --network host --mount type=bind,source="$(pwd)",target=/tmp hbagdi/deck --kong-addr http://kong-ent1:8001 --state /tmp/kong.yaml validate
-        docker run --network host --mount type=bind,source="$(pwd)",target=/tmp hbagdi/deck --kong-addr http://kong-ent1:8001 --state /tmp/kong.yaml sync
+        docker run --network docker-compose_default --mount type=bind,source="$(pwd)",target=/tmp hbagdi/deck --kong-addr http://kong-ent1:8001 --state /tmp/kong.yaml validate
+        docker run --network docker-compose_default --mount type=bind,source="$(pwd)",target=/tmp hbagdi/deck --kong-addr http://kong-ent1:8001 --state /tmp/kong.yaml sync
     - name: Test proxy key auth
       run: |
-        STATUS=$(docker run --rm --network=host kongaaron/just-httpie http://kong-ent1:8000/keyAuth?apikey=gold -h --pretty=none | grep HTTP | cut -d ' ' -f 2)
+        STATUS=$(docker run --rm --network=docker-compose_default kongaaron/just-httpie http://kong-ent1:8000/keyAuth?apikey=gold -h --pretty=none | grep HTTP | cut -d ' ' -f 2)
         if [ $STATUS -ne 200 ] ; then
           echo "An unexpected status code of $STATUS was returned."
           exit $STATUS;
@@ -42,10 +42,10 @@ jobs:
       env:
         LIMIT: 3
       run: |
-        docker run --network host kongaaron/just-httpie -f http://kong-ent1:8001/services/httpbin/routes name=customRateLimit paths=/customRateLimit
-        docker run --network host kongaaron/just-httpie -f http://kong-ent1:8001/routes/customRateLimit/plugins name=rate-limiting-advanced config.limit=$LIMIT config.sync_rate=10 config.window_size=60
-        for (( i=0; i <= $LIMIT; i++ )); do docker run --network host kongaaron/just-httpie http://kong-ent1:8000/customRateLimit; done
-        STATUS=$(docker run --rm --network=host kongaaron/just-httpie http://kong-ent1:8000/customRateLimit -h --pretty=none | grep HTTP | cut -d ' ' -f 2)
+        docker run --network docker-compose_default kongaaron/just-httpie -f http://kong-ent1:8001/services/httpbin/routes name=customRateLimit paths=/customRateLimit
+        docker run --network hodocker-compose_defaultst kongaaron/just-httpie -f http://kong-ent1:8001/routes/customRateLimit/plugins name=rate-limiting-advanced config.limit=$LIMIT config.sync_rate=10 config.window_size=60
+        for (( i=0; i <= $LIMIT; i++ )); do docker run --network docker-compose_default kongaaron/just-httpie http://kong-ent1:8000/customRateLimit; done
+        STATUS=$(docker run --rm --network=docker-compose_default kongaaron/just-httpie http://kong-ent1:8000/customRateLimit -h --pretty=none | grep HTTP | cut -d ' ' -f 2)
         if [ $STATUS -ne 429 ] ; then
           echo "An unexpected status code of $STATUS was returned."
           exit $STATUS;
