--- a/.github/workflows/validate-kong.yaml
+++ b/.github/workflows/validate-kong.yaml
@@ -38,6 +38,13 @@ jobs:
           echo "An unexpected status code of $STATUS was returned."
           exit $STATUS;
         fi
+    - name: Test correlation plugin
+      run: |
+        STATUS=$(docker run --rm --network=docker-compose_default kongaaron/just-httpie http://kong-ent1:8000/httpbin -h --pretty=none | grep Kong-Request-ID | cut -d ':' -f 1)
+        if [ $STATUS -ne 'Kong-Request-ID' ] ; then
+          echo "The expected header of Kong-Request-ID was not matched. $STATUS was returned instead."
+          exit $STATUS;
+        fi
     - name: Test adding rate-limited route
       env:
         LIMIT: 3
