added dump_config to aid KIC debugging

--- a/k3d/kong-enterprise.yaml
+++ b/k3d/kong-enterprise.yaml
@@ -226,6 +226,8 @@ ingressController:
   enabled: true
   installCRDs: false
   env:
+    # https://docs.konghq.com/kubernetes-ingress-controller/1.2.x/troubleshooting/#dumping-generated-kong-configuration
+    dump_config: enabled
     kong_admin_token:
       valueFrom:
         secretKeyRef:
